[gd_scene load_steps=12 format=3 uid="uid://d3krjr1dqbv7c"]

[ext_resource type="Script" path="res://game/pause/PauseMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dr0bfwtqvloo" path="res://assets/images/ui/pause_menu/self_destruct_button.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dptx3mq7l7mua" path="res://assets/images/ui/pause_menu/resume_button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://c3sqxceaogggy" path="res://assets/images/ui/pause_menu/resume_button_highlight.png" id="4"]
[ext_resource type="Theme" uid="uid://butjorp5qm377" path="res://game/ui/HUDFont.tres" id="4_teyo3"]
[ext_resource type="Texture2D" uid="uid://dlfxbqecqq746" path="res://assets/images/ui/pause_menu/self_destruct_button_highlight.png" id="5"]
[ext_resource type="Script" path="res://game/pause/PauseMenuParallax.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://b2n50oqbky7jq" path="res://assets/images/ui/menu/grid.png" id="8"]

[sub_resource type="Theme" id="13"]

[sub_resource type="Shader" id="20"]
code = "shader_type canvas_item;

uniform float warpAmount : hint_range(0.0, 1.0) = 0.97;

vec2 warp(vec2 uv){
    vec2 delta = uv - 0.5;
    float delta2 = dot(delta.xy, delta.xy);
    float delta4 = delta2 * delta2;
    float delta_offset = delta4 * warpAmount;

    return uv + delta * delta_offset;
}

void fragment()
{
	vec2 warp_uv = warp(UV);
    COLOR = texture(TEXTURE, warp_uv);
}"

[sub_resource type="ShaderMaterial" id="21"]
shader = SubResource("20")
shader_parameter/warpAmount = 0.15

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 2
scroll_base_scale = Vector2(3, 1)
scroll_ignore_camera_zoom = true
script = ExtResource("6")

[node name="BackLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(4000, 4000)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/BackLayer"]
show_behind_parent = true
offset_left = -605.0
offset_top = -726.0
offset_right = 7395.0
offset_bottom = 7274.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("13")
color = Color(0, 0, 0, 0)

[node name="GridLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_mirroring = Vector2(4000, 4000)

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer"]
offset_left = -602.776
offset_top = -721.705
offset_right = 3397.22
offset_bottom = 3278.3
texture = ExtResource("8")

[node name="GridLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
modulate = Color(1, 1, 1, 0.14902)
scale = Vector2(0.5, 0.5)
motion_scale = Vector2(-0.5, -0.5)
motion_mirroring = Vector2(4000, 4000)

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer2"]
visible = false
offset_left = -602.776
offset_top = -721.705
offset_right = 3397.22
offset_bottom = 3278.3
texture = ExtResource("8")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("21")
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport"]
modulate = Color(0, 0, 0, 0.286275)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 40.6972
offset_top = 16.1432
offset_right = 1145.7
offset_bottom = 167.143
theme = ExtResource("4_teyo3")
text = "Runtime Functions"

[node name="Label2" type="Label" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 40.6972
offset_top = 117.591
offset_right = 1457.7
offset_bottom = 268.591
theme = ExtResource("4_teyo3")
theme_override_font_sizes/font_size = 35
text = "User advisory: This Interface does not halt the remote program runtime."

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 40.3501
offset_top = 168.686
offset_right = 790.35
offset_bottom = 412.686
scale = Vector2(0.66, 0.66)

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Control/MarginContainer"]
layout_mode = 2

[node name="Resume" type="TextureButton" parent="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3")
texture_hover = ExtResource("4")

[node name="Quit" type="TextureButton" parent="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")
texture_hover = ExtResource("5")

[node name="ColorRect2" type="ColorRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
anchor_left = 0.007
anchor_right = 0.012
anchor_bottom = 1.0
offset_left = 5.5559
offset_top = 0.396851
offset_right = 5.5559
offset_bottom = 0.396851

[node name="ColorRect3" type="ColorRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
anchor_left = 0.005
anchor_right = 0.007
anchor_bottom = 1.0
offset_top = 0.396851
offset_bottom = 0.396851

[connection signal="mouse_entered" from="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
